feature: commit live version

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Die Rechnung bitte!</title>
+    <title>und</title>
     <script type="text/javascript" src="/rechnung.js"></script>
+
     <link rel="stylesheet" href="/rechnung.css" />
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
   </head>
 
   <body id="rechnung"></body>
